osborn: Apply configs changes from stock
Change-Id: I252c0bcc290d93a1f93f0067730685baf6bc1441

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -96,7 +96,7 @@ FastRoamEnabled=1
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
-RoamRssiDiff=3
+RoamRssiDiff=8
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
@@ -223,7 +223,7 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=2
+gEnablePowerSaveOffload=1
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -259,7 +259,7 @@ gVhtMpduLen=2
 gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
-isP2pDeviceAddrAdministrated=0
+isP2pDeviceAddrAdministrated=1
 
 # Set Thermal Power limit
 TxPower2g=10
@@ -422,7 +422,7 @@ TSOEnable=1
 
 # Enable Large Recieve Offload
 # 1 - enable(default)  0 - disable
-LROEnable=1
+LROEnable=0
 
 # Enable HT MPDU Density
 # 4 for 2 micro sec
@@ -442,6 +442,32 @@ gEnableFlowSteering=1
 # 1 - enable  0 - disable(default)
 gEnableNanSupport=1
 ################ NAN feature set end #####################
+
+# Sends NULL frame to AP periodically in seconds to notify STA's existence
+gStaKeepAlivePeriod=5
+
+# set the number of beacon missing  to 200 for tolerarte 20seconds of 20seconds of 360AP beacon leak
+gHeartbeat24=200
+
+
+# Add for set value of kick out, 2047 means if DUT missed 2047 packets from AP, then disconnect
+gDroppedPktDisconnectTh=2047
+
+# packet filter
+g_enable_packet_filter_bitmap=63
+
+# Sets RSSI preference for 5GHz over 2.4GHz AP
+gSelect5GHzMargin=5
+
+# To enabled/disable PER based roaming in FW
+# 0: disabled
+# 1: enabled for Rx traffic
+# 2: enabled for Tx traffic
+# 3: enabled for Tx and Rx traffic
+gper_roam_enabled=0
+
+# Sets dense roam RSSI threshold diff
+groam_dense_rssi_thresh_offset=0
 
 END
 
