osborn: init: Switch to BFQ on boot completed
Change-Id: If5e0b90d0d45e2afef7a90f096501808811a6ac6

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -135,6 +135,10 @@ on boot
     chmod 0644 /sys/bus/platform/devices/soc:fpc1020/pinctl_set
     chown system system /sys/bus/platform/devices/soc:fpc1020/pinctl_set
 
+on property:sys.boot_completed=1
+    # Set BFQ I/O scheduler
+    setprop sys.io.scheduler "bfq"
+
 #Peripheral manager
 service per_mgr /system/vendor/bin/pm-service
     class core
