osborn: twrp: Execute logic_volume instead
Change-Id: Ia7d7fa39e1b3e930d238bcc4a422f9ed47d3d5bb

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -29,11 +29,5 @@ on fs
     wait /dev/block/platform/soc/c0c4000.sdhci
     symlink /dev/block/platform/soc/c0c4000.sdhci /dev/block/bootdevice
 
-service sbinlogic_volume /sbin/logic_volume -m striped -r 2:3 -c 256
-    disabled
-    user root
-    group root
-    seclabel u:r:recovery:s0
-
-on boot
-    start sbinlogic_volume
+    exec -- /sbin/logic_volume -m striped -r 2:3 -c 256
+    wait /dev/block/logic_data
