--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -32,5 +32,12 @@ on fs
     wait /dev/block/platform/soc/c0c4000.sdhci
     symlink /dev/block/platform/soc/c0c4000.sdhci /dev/block/bootdevice
 
-    exec -- /sbin/logic_volume -m striped -r 2:3 -c 256
+    start logic_volume
     wait /dev/block/logic_data
+
+service logic_volume /sbin/logic_volume -m striped -r 2:3 -c 256
+    disabled
+    oneshot
+    user root
+    group root
+    seclabel u:r:recovery:s0
